--- a/BusinessIntelligenceLabs/BusinessIntelligenceLabs/BusinessIntelligenceLabs.csproj
+++ b/BusinessIntelligenceLabs/BusinessIntelligenceLabs/BusinessIntelligenceLabs.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="boolean.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +74,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>_Data_set_1_1_DataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="_DestinationDatabase_1_DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>_DestinationDatabase_1_DataSet.xsd</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -105,6 +111,17 @@
     </None>
     <None Include="_Data_set_1_1_DataSet.xss">
       <DependentUpon>_Data_set_1_1_DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="_DestinationDatabase_1_DataSet.xsc">
+      <DependentUpon>_DestinationDatabase_1_DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="_DestinationDatabase_1_DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>_DestinationDatabase_1_DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_DestinationDatabase_1_DataSet.xss">
+      <DependentUpon>_DestinationDatabase_1_DataSet.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
